#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#  $Revision$
#
# Description:
#  ChangeLog file for package CalibManager
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

2015-06-02 Mikhail S. Dubrovin
Tag: V00-00-95
- ConfigFileGenerator - add :stream=0-79: in dataset description (PSAS-6)

2015-05-20 Mikhail S. Dubrovin
Tag: V00-00-94
- ConfigParametersForApp.py - add type geometry in the list of types for pnccd.

2015-05-19 Mikhail S. Dubrovin
Tag: V00-00-93
- CommandLineCalib.py - fix bug timeout_sec -> self.timeout_sec (PSAS-6)
	
2015-05-18 Mikhail S. Dubrovin
Tag: V00-00-92
- add parameter cp.job_timeout_sec for calibrun and its configuration in GUIConfigPars (PSAS-6) 
	
2015-05-13 Mikhail S. Dubrovin
Tag: V00-00-91
- PlotImgSpeWidget.py - add number of entries to histogram info.
	
2015-05-13 Mikhail S. Dubrovin
Tag: V00-00-90
- Save Princeton calib files WITH metadata, modified: ConfigFileGenerator.py and psana-module-peds-aver-princeton.cfg (PSAS-6) 
	
2015-05-04 Mikhail S. Dubrovin
Tag: V00-00-89
- add parameter cp.mask_rms_thr_min and propagate it in calibman/calibrun code along with cp.mask_rms_thr (PSAS-6) 
	
2015-04-17 Mikhail S. Dubrovin
Tag: V00-00-88
- app/calibrun - return check LUSTRE version on start-up

2015-04-17 Mikhail S. Dubrovin
Tag: V00-00-87
- add live mode for ffb, fix info messages about batch queue and farm (PSAS-6)
- app/calibrun - add comment about ffb
	       - do not check LUSTRE version on start-up
- ConfigFileGenerator - add in dataset defenition ":dir=..." for non-standard directory and ":live" for ffb.
- BatchJobPedestals - use command "psana -c <config-file.cfg>" with files defined inside. Fixes xtc/file (missing slash).
- CommandLineCalib - extend status message when batch is running.