@@ -12,6 +12,18 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2015-07-02 Mikhail S. Dubrovin
+Tag: V00-00-96
+- Improve ROI Mask GUI performance (PSAS-6)
+  - GUIMaskEditor
+    - button color change if med window is closed by itself
+    - use cp parameters for med
+    - set tooltips for all fields
+    - add gu.confirm_or_cancel_dialog_box befroe file selection dialog to reset file name to empty 
+      for np.once()   
+  - ConfigParametersForApp - add 4 pars for for med - mask editor command line launched in GUIMaskEditor
+  - GlobalUtils.load_textfile() - add loading text from *.npy file for GUIFileBrowser.py
+
 2015-06-02 Mikhail S. Dubrovin
 Tag: V00-00-95
 - ConfigFileGenerator - add :stream=0-79: in dataset description (PSAS-6)
